--- a/src/EVG/css/_core.scss
+++ b/src/EVG/css/_core.scss
@@ -56,7 +56,7 @@ $x1a: #fbfdff; // Links
 $x1ah: $clead; // Links Hover
 
 // Don't forget to delete unused styles! Font imports at components/layout.js
-$font1: 'Montserrat', Helvetica, Arial, sans-serif; // Headers
+$font1: 'DM Serif Display', Helvetica, Arial, sans-serif; // Headers
 $font2: 'Montserrat', Helvetica, Arial, sans-serif; // SubHeaders
 $font3: 'Montserrat', Helvetica, Arial, sans-serif; // Body
 
