--- a/src/EVG/css/_core.scss
+++ b/src/EVG/css/_core.scss
@@ -12,8 +12,8 @@ $c0p: #0a0a0c; // Body Text
 $c0a: $clead; // Links
 $c0ah: #0a0a0c; // Links Hover
 
-$c1: #f0efee; // Background
-$c1h: #0a0a0c; // Headers Text
+$c1: #9BB7D4; // Background
+$c1h: #fff; // Headers Text
 $c1p: #0a0a0c; // Body Text
 $c1a: $clead; // Links
 $c1ah: #0a0a0c; // Links Hover
