--- a/src/components/Content/ACF/Custom/HeroDetail/style.scss
+++ b/src/components/Content/ACF/Custom/HeroDetail/style.scss
@@ -3,9 +3,11 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: 7em;
+  font-size: 8.5em;
   h1{
-    line-height: 0.8;
+    line-height: 0.75;
+    font-weight: 100;
+
   }
  
 }
