--- a/src/EVG/css/_core.scss
+++ b/src/EVG/css/_core.scss
@@ -2,7 +2,7 @@
 	Core
 ========================================================================== */
 
-$clead: #ff1233; // Leading Color
+$clead: #fff; // Leading Color
 $clead2: #fac400; // Secondary Leading Color
 
 // Color themes for sections (c0 is brightest, c5 darkest) c0 is the default body theme
