--- a/src/components/Content/ACF/Custom/Links/style.scss
+++ b/src/components/Content/ACF/Custom/Links/style.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   font-size: 5em;
-  padding: 2em 1em;
+  padding: 0em 1em 2em;
   .container {
     width: 100%;
   }
