--- a/src/components/Content/ACF/Custom/ImageSection/style.scss
+++ b/src/components/Content/ACF/Custom/ImageSection/style.scss
@@ -1,5 +1,18 @@
 #block-custom-image {
-
+  .content {
+    position: relative;
+    cursor: pointer;
+    h2 {
+      transition: all 1s;
+      opacity: 0.5;
+    }
+    &:hover {
+      h2 {
+        opacity: 1;
+        transform: translateY(-10%);
+      }
+    }
+  }
 
   .content-container {
     padding: 18em 0;
@@ -39,20 +52,21 @@
 
   .color {
     background-color: rgb(11, 250, 210);
-    filter: blur(50px);
+    filter: blur(30px) ;
     border-radius: 50%;
     position: absolute;
-    width: 2em;
-    height: 2em;
+    width: 10em;
+    height: 10em;
     display: block;
     z-index: 99;
     transform: translate(-50%,-50%);
-    transition: transform 2s ease, opacity 1s;
+    transition: transform 0.5s ease, opacity 1s;
     transform-origin: center center;
-    opacity: 0;
+    opacity: 0.5;
     &.active {
       opacity: 1;
       transform: translate(-50%,-50%) scale(2);
+      filter: blur(40px) ;
     }
   }
 
